// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse \\f\\relax{x} = \\int_{-\\infty}^\\infty\\f\\hat\\xi\\,e^{2 \\pi i \\xi x}\\,d\\xi 1`] = `
{
  "w:r": [
    {
      "w:r": [
        {
          "m:r": [
            {
              "m:t": [
                "f",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "relax",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "x",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "=",
              ],
            },
          ],
        },
        {
          "m:sSup": [
            {
              "m:sSupPr": {},
            },
            {
              "m:e": [
                {
                  "m:sSub": [
                    {
                      "m:sSubPr": {},
                    },
                    {
                      "m:e": [
                        {
                          "m:r": [
                            {
                              "m:t": [
                                "∫",
                              ],
                            },
                          ],
                        },
                      ],
                    },
                    {
                      "m:sub": [
                        {
                          "m:r": [
                            {
                              "m:t": [
                                "-",
                              ],
                            },
                          ],
                        },
                        {
                          "m:r": [
                            {
                              "m:t": [
                                "∞",
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "m:sup": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "∞",
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "f",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "hat",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ξ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                ",",
              ],
            },
          ],
        },
        {
          "m:sSup": [
            {
              "m:sSupPr": {},
            },
            {
              "m:e": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "e",
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "m:sup": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "2",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "π",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "i",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "ξ",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "x",
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                ",",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "d",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ξ",
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse \\frac{a+b}{c+d} 1`] = `
{
  "w:r": [
    {
      "w:r": [
        {
          "m:f": [
            {
              "m:num": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "a",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "+",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "b",
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "m:den": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "c",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "+",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "d",
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse \\sqrt[30]{a+\\sqrt{b+c}} 1`] = `
{
  "w:r": [
    {
      "w:r": [
        {
          "m:rad": [
            {
              "m:radPr": {},
            },
            {
              "m:deg": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "3",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "0",
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "m:e": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "a",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "+",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "sqrt",
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse \\sum_{k=1}^{n} k=rac{n(n+1)}{2} 1`] = `
{
  "w:r": [
    {
      "w:r": [
        {
          "m:sSup": [
            {
              "m:sSupPr": {},
            },
            {
              "m:e": [
                {
                  "m:sSub": [
                    {
                      "m:sSubPr": {},
                    },
                    {
                      "m:e": [
                        {
                          "m:nary": [
                            {
                              "m:naryPr": [
                                {
                                  "m:chr": {
                                    "_attr": {
                                      "m:val": "∑",
                                    },
                                  },
                                },
                                {
                                  "m:limLoc": {
                                    "_attr": {
                                      "m:val": "undOvr",
                                    },
                                  },
                                },
                                {
                                  "m:supHide": {
                                    "_attr": {
                                      "m:val": 1,
                                    },
                                  },
                                },
                                {
                                  "m:subHide": {
                                    "_attr": {
                                      "m:val": 1,
                                    },
                                  },
                                },
                              ],
                            },
                            {
                              "m:e": {},
                            },
                          ],
                        },
                      ],
                    },
                    {
                      "m:sub": [
                        {
                          "m:r": [
                            {
                              "m:t": [
                                "k",
                              ],
                            },
                          ],
                        },
                        {
                          "m:r": [
                            {
                              "m:t": [
                                "=",
                              ],
                            },
                          ],
                        },
                        {
                          "m:r": [
                            {
                              "m:t": [
                                "1",
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "m:sup": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "n",
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "k",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "=",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "r",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "a",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "c",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "n",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "(",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "n",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "+",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "1",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                ")",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "2",
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse L = \\frac{1}{2} \\rho v^2 S C_L 1`] = `
{
  "w:r": [
    {
      "w:r": [
        {
          "m:r": [
            {
              "m:t": [
                "L",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "=",
              ],
            },
          ],
        },
        {
          "m:f": [
            {
              "m:num": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "1",
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "m:den": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "2",
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ρ",
              ],
            },
          ],
        },
        {
          "m:sSup": [
            {
              "m:sSupPr": {},
            },
            {
              "m:e": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "v",
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "m:sup": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "2",
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "S",
              ],
            },
          ],
        },
        {
          "m:sSub": [
            {
              "m:sSubPr": {},
            },
            {
              "m:e": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "C",
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "m:sub": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "L",
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse command greek1 1`] = `
{
  "w:r": [
    {
      "w:r": [
        {
          "m:r": [
            {
              "m:t": [
                "α",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "β",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "γ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "δ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ϵ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ζ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "η",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "θ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ι",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "κ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "λ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "μ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ν",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ξ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "o",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "π",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ρ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "σ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "τ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "υ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ϕ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "χ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ψ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ω",
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse command greek2 1`] = `
{
  "w:r": [
    {
      "w:r": [
        {
          "m:r": [
            {
              "m:t": [
                "ε",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ϑ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ϱ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "ς",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "φ",
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse command greek3 1`] = `
{
  "w:r": [
    {
      "w:r": [
        {
          "m:r": [
            {
              "m:t": [
                "Γ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Δ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Θ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Λ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Ξ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Π",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Σ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Υ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Φ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Ψ",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "Ω",
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse i hbar \\frac{partial psi}{partial t} = H psi(x,t) 1`] = `
{
  "w:r": [
    {
      "w:r": [
        {
          "m:r": [
            {
              "m:t": [
                "i",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "h",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "b",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "a",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "r",
              ],
            },
          ],
        },
        {
          "m:f": [
            {
              "m:num": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "p",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "a",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "r",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "t",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "i",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "a",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "l",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "p",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "s",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "i",
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "m:den": [
                {
                  "m:r": [
                    {
                      "m:t": [
                        "p",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "a",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "r",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "t",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "i",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "a",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "l",
                      ],
                    },
                  ],
                },
                {
                  "m:r": [
                    {
                      "m:t": [
                        "t",
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "=",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "H",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "p",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "s",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "i",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "(",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "x",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                ",",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                "t",
              ],
            },
          ],
        },
        {
          "m:r": [
            {
              "m:t": [
                ")",
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;
